--- a/wonderland.Rmd
+++ b/wonderland.Rmd
@@ -1,26 +1,139 @@
 ---
-title: "Alice’s adventures in Wonderland"
+title: "Lewis Carroll and Alice's Adventure"
 author: "Leanne Fortney"
 date: "April 11, 2017"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(include = FALSE)
 ```
-```{r}
+```{r, echo=FALSE}
 library(tidyverse)
 library(stringr)
 library(gutenbergr)
 library(tokenizers)
 library(tidytext)
 library(topicmodels)
-```
-```{r}
 library(dplyr)
+```
+```{r, include=FALSE}
+gutenberg_works(str_detect(author, "Carroll"))
+books <- gutenberg_download(c(11, 12, 13, 620, 651, 19002, 28696, 28885, 29042, 29888, 33582, 35497, 35535, 36308, 38308, 38065, 48630, 48795), meta_fields = "title")
 
-gutenberg_metadata %>%
-filter(title == "Alice's Adventures in Wonderland")
+books <- books %>% 
+mutate(words = count_words(text))
+```
+```{r, include=FALSE}
+books
 
-Alice <- gutenberg_download(11)
+sum(books$words)
+ggplot(books, aes(x = words)) + 
+geom_histogram(binwidth = 1) +
+  labs(title = "Lengths of narratives")
+```
+```{r, include=FALSE}
+words <- books %>%
+  unnest_tokens(word, text)
+
+books_tokenized <- books %>% 
+  select(title, text) %>% 
+  unnest_tokens(word, text, token = "words")
+
+  word_counts <- books_tokenized %>% 
+  count(word, sort = TRUE)
+
+  before <- nrow(books_tokenized)
+  
+  words_to_drop <- word_counts %>% 
+  filter(n <= 2 | n >= 8000)
+
+nrow(words_to_drop) / nrow(word_counts)
+
+books_tokenized <- books_tokenized %>% 
+  anti_join(words_to_drop, by = "word") %>% 
+  anti_join(stop_words, by = "word")
+
+after <- nrow(books_tokenized)
+before - after
+after / before
+
+```
+```{r, echo=FALSE}
+plot_words <- function(tidy_df, n = 10) {
+  require(ggplot2)
+  require(dplyr)
+  tidy_df %>%
+    count(word, sort = TRUE) %>%
+    top_n(n = n, n) %>% 
+    mutate(word = reorder(word, n)) %>%
+    ggplot(aes(word, n)) +
+    geom_col() +
+    xlab(NULL) +
+    coord_flip()
+}
+plot_words(books_tokenized, n = 60)
+
+```
+```{r, echo=FALSE}
+read_doc <- function(id) {
+  out <- books %>% 
+    filter(title == id)
+  cat(out[["text"]])
+}
+read_doc("Alice's Adventures in Wonderland")
+```
+```{r, include=FALSE}
+alice <- gutenberg_download((11), meta_fields = "title")
+
+alice <- alice %>% 
+mutate(words = count_words(text))
+
+alice
+
+sum(alice$words)
+ggplot(alice, aes(x = words)) + 
+geom_histogram(binwidth = 1) +
+  labs(title = "Lengths of narratives")
+
+words <- alice %>%
+  unnest_tokens(word, text)
+
+alice_tokenized <- alice %>% 
+  select(title, text) %>% 
+  unnest_tokens(word, text, token = "words")
+
+  word_counts <- alice_tokenized %>% 
+  count(word, sort = TRUE)
+
+  before <- nrow(alice_tokenized)
+  
+  words_to_drop <- word_counts %>% 
+  filter(n <= 2 | n >= 8000)
+
+nrow(words_to_drop) / nrow(word_counts)
+
+alice_tokenized <- alice_tokenized %>% 
+  anti_join(words_to_drop, by = "word") %>% 
+  anti_join(stop_words, by = "word")
+
+after <- nrow(alice_tokenized)
+before - after
+after / before
+```
+```{r, echo=FALSE}
+plot_words <- function(tidy_df, n = 10) {
+  require(ggplot2)
+  require(dplyr)
+  tidy_df %>%
+    count(word, sort = TRUE) %>%
+    top_n(n = n, n) %>% 
+    mutate(word = reorder(word, n)) %>%
+    ggplot(aes(word, n)) +
+    geom_col() +
+    xlab(NULL) +
+    coord_flip()
+}
+plot_words(alice_tokenized, n = 60)
+
 ```
