--- a/wonderland.Rmd
+++ b/wonderland.Rmd
@@ -132,7 +132,7 @@ after / before
 plot_words <- function(tidy_df, n = 10) {
   tidy_df %>%
     count(word, sort = TRUE) %>%
-    top_n(n = n, n) %>% 
+      top_n(n = n, n) %>% 
     mutate(word = reorder(word, n)) %>%
     ggplot(aes(word, n, fill= n)) +
     geom_col() +
@@ -146,29 +146,31 @@ If we take a closer look at the word usuage, it is clearly illustrated that the 
 plot_words(alice_tokenized, n = 10)
 ```
 
-We can also compare "Alice's Adventures in Wonderland" with "Through the Looking Glass" 
+We can also compare "Alice's Adventures in Wonderland" with "Through the Looking Glass" for any commonalities. With a sample size and low threshhold, at a .72 accuracy, we assess the two books. 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
 minhash <- minhash_generator(n = 5, seed = 15)
 lsh_threshold(25, 5)
-
+```
+```{r, include=FALSE}
 corpus <- TextReuseCorpus(dir = "Carroll",
                           tokenizer = tokenizers::tokenize_ngrams,
                           n = 5, simplify = TRUE,
                           minhash_func = minhash, keep_tokens = TRUE)
 
+
 doc_alice <- corpus[["11"]]
 doc_looking_glass <- corpus[["12"]]
-
+```
+When comparing for similarities between "Alice's Adventures" and "Through the looking glass", we have the following results. Not even close to 1% of the text.
+```{r, echo=FALSE}
 jaccard_similarity(doc_alice, doc_looking_glass)
 
 
 cf_sample <- pairwise_compare(sample(corpus, 2), jaccard_similarity)
 cf_sample %>% round(2)
-
-buckets <- lsh(corpus, bands = 5)
-```
 ```{r, echo=FALSE}
+buckets <- lsh(corpus, bands = 5)
 align_local(doc_alice, doc_looking_glass)
 ```
 
